--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 ############################ Default configuration #########################
-baseURL = "https://examplesite.com/"
+baseURL = "https://www.wuyuchong.com/"
 languageCode = "en-us"
 # site title 
 title = "Northendlab | Blog Template"
