--- a/config.toml
+++ b/config.toml
@@ -49,16 +49,16 @@ URL = "tools"
 name = "tools"
 weight = 2
 
+[[menu.main]]
+URL = "中文"
+name = "中文"
+weight = 3
+
 # footer menu
 [[menu.footer]]
-URL = "contact"
-name = "Contact"
+URL = "中文"
+name = "中文"
 weight = 1
-
-[[menu.footer]]
-URL = "tools"
-name = "tools"
-weight = 2
 
 
 ######################### Default Parameters ###########################
