Change the baseURL to www.

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 ############################ Default configuration #########################
-baseURL = "https://www.yu-chong.com"
+baseURL = "www.yu-chong.com"
 languageCode = "en-us"
 # site title 
 title = "Yu-chong"
