--- a/config.toml
+++ b/config.toml
@@ -1,9 +1,10 @@
 ############################ Default configuration #########################
 baseURL = "https://www.yu-chong.com"
 languageCode = "en-us"
+ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 # site title 
 title = "Yu-chong"
-description: "Personal Website of Yuchong Wu"
+description = "Personal Website of Yuchong Wu"
 # theme
 theme = "northendlab-hugo"
 # post pagination
